# tlab_Tutorial

./: .gitignore  README.md
02_DerivedTypes/: FirstDerivedType
03_Modules/: array_calc  matrix_output.f90
04_TlabArrays/: array_calc.f90
05big_multi_cpu/: array_calc
06_MetMod_programming/sheet2/: all_kinds.f03
DerivedTypes/: FirstDerivedType.f90
MetMod_programming/sheet2/: 0a_evolution_equation  0a_evolution_equation.f03  Makefile  Sheet1.ipynb  array_calc  calc  d  export_values.f03  parameters.f03
Modules/: Makefile  array_calc  array_calc.f90  matrix_output.f90
Pointers/: simplePointers.f90
TlabArrays/: Makefile  array_calc  array_calc.f90  array_calc_tlab  array_calc_tlab.f90
config/: default.cmake
output/: time.csv  time_uhhpc.csv
src/: CMakeLists.txt
src/00_save_to_csv/: test.f90
src/01_Pointers/: simplePointers
src/03_Modules/: Makefile
src/04_TlabArrays/: Makefile  array_calc  array_calc_tlab
src/05_multi_cpu/: Makefile  matrix_output.f90
src/07_cmake/: CMakeLists.txt  array_calc.f90
src/09_profiling/: array_calc.f90  compile_matcalc.sh  export_values.f90  matrix_multiply_module.f90  plot_time.ipynb  plot_time.py  run_ml_py.sh
src/10_gpu_detec/: gpu_detection.f90
src/11_cuda_memory/: async.cuf  async_optimized.cuf  bandwidth.cuf
src/12_cuda_prof/: CMakeLists.txt  run_ml_py.sh
src/13_ring_acc_cuda/: async_optimized.cuf  cuda_acc.cuf  cuda_acc.f90
src/14_ring_diffs/: gpu_ring_acc.f08  gpu_ring_device.cuf  gpu_ring_managed.cuf  ring-irecv_30.f90  time_rings.sh
src/15_cuda_mpi_prof/: compile.sh  compile_matcalc.sh  (+7 more)
(+191 files in other folders)
